--- a/01-azure-pipelines.yml
+++ b/01-azure-pipelines.yml
@@ -1,24 +1,24 @@
+
+
 trigger:
-    master
+  master
 pool:
-    vmImage: Ubuntu-latest
+  vmImage: Ubuntu-latest
 
 stages:
-  - stage: Dev
-jobs:
+-stage: Dev
+ jobs:
   -job: Job1
-   steps:
-   - script: echo Hello World!
-     displayName: 'running one line script'
-   - script: echo Hello world from job1!
-     displayName: 'running one line script'
-  -job: Job2
-   steps:
-   -script: |
-    echo Add other task to build
-    echo need attention
-    echo abcdefg
-    displayName: 'running a multi line script'
-  -job: Job3
-  steps:
-  -bash: echo hi from Job3
+    steps:
+    - script: echo hello world
+      displayName: 'running a one line script'
+  - job: Job2
+    steps:
+    - script: |
+      echo add tasks to build
+      echo see link
+      echo abcd
+      
+  -job: Job3 
+    steps:
+    -script: bcda
