Update 01- Azure Pipelines

--- a/01-azure-pipelines.yml
+++ b/01-azure-pipelines.yml
@@ -23,8 +23,8 @@ stages:
 
       - job: job3  
         steps:
-          - script: this is job3
-            displayName: 'running single line script'
+          - bash: this is job3
+          
 
           
 
