changes made from github

--- a/02 Azure pipelines.yml
+++ b/02 Azure pipelines.yml
@@ -30,7 +30,7 @@ stages:
         - job3
         steps:
         - script: echo this is from job4
-          displayName: 'running last job'
+          displayName: 'running last job from github'
           
 
           
